--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^3.6.4",
     "cron-validate": "^1.4.3",
     "date-fns": "^2.8.0",
+    "docx": "^7.3.0",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
