--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "core-js": "^3.6.4",
     "cron-validate": "^1.4.3",
     "date-fns": "^2.8.0",
+    "docx": "^7.4.0",
     "elliptic": ">=6.5.4",
     "engine.io": ">=6.1.1",
     "file-saver": "^2.0.5",
@@ -50,7 +51,7 @@
     "jquery": ">=3.5.0",
     "json-schema": ">=0.4.0",
     "jsprim": "1.4.1",
-    "jszip": ">=3.7.0",
+    "jszip": "^3.10.0",
     "log4js": ">=6.4.0",
     "nanoid": ">=3.1.31",
     "ngx-bootstrap": "^5.5.0",
