--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ngx-bootstrap": "^5.5.0",
     "ngx-papaparse": "^5.0.0",
     "node-forge": ">=1.0.0",
+    "npm": "^9.6.2",
     "ora": "5.4.1",
     "path-parse": ">=1.0.7",
     "rxjs": "~6.5.4",
